fix(web): get started elvis code, fix overflow, add copy on click

--- a/packages/web/src/app/doc-pages/about/get-started-doc/get-started-doc.component.scss
+++ b/packages/web/src/app/doc-pages/about/get-started-doc/get-started-doc.component.scss
@@ -96,3 +96,7 @@
     background: var(--e-color-brand-accent);
   }
 }
+
+.overflow-scroll {
+  overflow-x: scroll;
+}
